--- a/Activity-02/index1.html
+++ b/Activity-02/index1.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Naoto Calip</h1>
-    <h2>If you were a boat, what type would you be?</h2>
-    <p>It would be Cama Kau because I am the fastest man alive🤙😏</p>
+    <h1>My activity </h1>
+    <hr>
+    <a href="https://byuh-cs140.github.io/activities-naotocalip96/Activity-01/">Activity-01</a>
 </body>
 </html>
