--- a/Activity-01/index1.html
+++ b/Activity-01/index1.html
@@ -7,7 +7,10 @@
 </head>
 <body>
     <h1>My activity </h1>
+    
     <hr>
     <a href="https://byuh-cs140.github.io/activities-naotocalip96/Activity-01/">Activity-01</a>
+    <a href="Activity-02/index.html">Activity-01</a>
+
 </body>
 </html>
