--- a/Activity-02/index.html
+++ b/Activity-02/index.html
@@ -8,10 +8,10 @@
 <body>
     <header>
         <h1>Literary Analisys</h1>
-        <p><a href="#Quote">Quote</a></p>
         <p><a href="https://byuh.instructure.com/courses/1480555/files/76751827?module_item_id=16737169">Eleven</a></p>
         <p><a href="https://byuh.instructure.com/courses/1480555/files/76751864?module_item_id=16737170">Fish Cheeks</a></p>
         <p><a href="../Activity-01/index1.html">Activity</a></p> 
+        <p><a href="#message">Quote</a></p>
     </header>
     
     <section>
@@ -49,7 +49,7 @@
 
     <footer>
         <balckquote>
-            <p id="Quote">"I’m eleven today. I’m eleven, ten, nine, eight, seven, six, five, four, three, two, and one, but I
+            <p id="message">"I’m eleven today. I’m eleven, ten, nine, eight, seven, six, five, four, three, two, and one, but I
                 wish I was one hundred and two. I wish I was anything but eleven. Because I want today to be
                 far away already, far away like a runaway balloon, like a tiny o in the sky, so tiny—tiny you
                 have to close your eyes to see it." - Sandra Cineros
