--- a/Activity-01/index.html
+++ b/Activity-01/index.html
@@ -6,11 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>My activity </h1>
-    
-    <hr>
-    <a href="../Activity-01/index.html">Activity-01</a>
-    <a href="../Activity-02/index.html">Activity-02></a>
-
+    <h1>Naoto Calip</h1>
+    <h3>If you were a boat, what type would you be?</h3>
+    <p>It would be Cama cau because I am the fastest man alive</p>
 </body>
 </html>
