--- a/Activity-02/index.html
+++ b/Activity-02/index.html
@@ -16,7 +16,8 @@
     
     <section>
         <p>
-            Feeling out of place is something that many people experience during the process of growing up. Sandra Cisneros' “Eleven” and Amy Tan's “Fish Cheeks” depict this feeling of loneliness. In both stories, children are troubled by the differences between their culture and their surroundings and are torn between their identity and society's expectations. In “Eleven,” the children experience a difficult time at school, while in “Fish Cheeks,” they are embarrassed by cultural differences at family meals. Both stories show how society makes children feel ashamed of their own culture.
+            Feeling out of place is something that many people experience during the process of growing up. Sandra Cisneros' “Eleven” and Amy Tan's <abbr title="the small, tender morsels of meat located on the side of a fish's face, just below the eyes">"Fisk Cheeks"<sup>1</sup></abbr> depict this feeling of loneliness. In both stories, children are troubled by the differences between their culture and their surroundings and are torn between their identity and society's expectations. In “Eleven,” the children experience a difficult time at school, while in “Fish Cheeks,” they are embarrassed by <strong>cultural differences</strong> at family meals. Both stories show how <strong>society</strong> makes children feel ashamed of their own culture.
+            
 
         </p>
 
@@ -45,17 +46,25 @@
 
         </p>
 
+
     </section>
 
     <footer>
         <balckquote>
-            <p id="message">"I’m eleven today. I’m eleven, ten, nine, eight, seven, six, five, four, three, two, and one, but I
+            <p id="message"><strong><em>Quote: "I’m eleven today. I’m eleven, ten, nine, eight, seven, six, five, four, three, two, and one, but I
                 wish I was one hundred and two. I wish I was anything but eleven. Because I want today to be
                 far away already, far away like a runaway balloon, like a tiny o in the sky, so tiny—tiny you
-                have to close your eyes to see it." - Sandra Cineros
+                have to close your eyes to see it." - Sandra Cineros</em></strong>
             </p>
         </balckquote>
-        <p><sub>&copy; 2025 Naoto Calip at BYUH</sub></p>       
+
+        <p>
+            <p>
+                <strong>Footnotes:</strong><br>
+                <sup>1</sup> Fish cheeks are the small, tender morsels of meat located on the side of a fish's face, just below the eyes.<br>
+            </p>
+        </p>
+        <p><sub>&copy; 2025 Naoto Calip at BYU-Hawaii</sub></p>       
 
     </footer>
 
