--- a/Activity-02/index.html
+++ b/Activity-02/index.html
@@ -8,8 +8,8 @@
 <body>
     <header>
         <h1>Literary Analisys</h1>
-        <p><a href="https://byuh.instructure.com/courses/1480555/files/76751827?module_item_id=16737169">Eleven</a></p>
-        <p><a href="https://byuh.instructure.com/courses/1480555/files/76751864?module_item_id=16737170">Fish Cheeks</a></p>
+        <p><a href="https://www.cluesclasses.com/uploads/1/3/5/7/135778041/week_2_eleven_cisneros_1.pdf">Eleven</a></p>
+        <p><a href="https://mrjeffmercado.weebly.com/uploads/3/9/2/1/39219677/fish_cheeks.pdf">Fish Cheeks</a></p>
         <p><a href="../Activity-01/index1.html">Activity</a></p> 
         <p><a href="#message">Quote</a></p>
     </header>
