--- a/Activity-02/index.html
+++ b/Activity-02/index.html
@@ -56,6 +56,13 @@
                 far away already, far away like a runaway balloon, like a tiny o in the sky, so tiny—tiny you
                 have to close your eyes to see it." - Sandra Cineros</em></strong>
             </p>
+
+            <p id="message"><strong><em>Quote: "I knew that she understood how much I had suffered
+                during the evening's dinner. It wasn't until many year later – long after I had gotten over my crush on
+                Robert – that I was able to fully appreciate her lesson and the true purpose behind our particular menu." - Amy Tan
+            </em></strong>
+
+            </p>
         </balckquote>
 
         <p>
