--- a/Activity-02/index.html
+++ b/Activity-02/index.html
@@ -8,15 +8,15 @@
 <body>
     <header>
         <h1>Literary Analisys</h1>
-        <p><a href="https://www.cluesclasses.com/uploads/1/3/5/7/135778041/week_2_eleven_cisneros_1.pdf">Eleven</a></p>
-        <p><a href="https://mrjeffmercado.weebly.com/uploads/3/9/2/1/39219677/fish_cheeks.pdf">Fish Cheeks</a></p>
+        <p><a href="https://www.cluesclasses.com/uploads/1/3/5/7/135778041/week_2_eleven_cisneros_1.pdf"><em>Eleven</em></a></p>
+        <p><a href="https://mrjeffmercado.weebly.com/uploads/3/9/2/1/39219677/fish_cheeks.pdf"><em>Fish Cheeks</em></a></p>
         <p><a href="../Activity-01/index1.html">Activity</a></p> 
         <p><a href="#message">Quote</a></p>
     </header>
     
     <section>
         <p>
-            Feeling out of place is something that many people experience during the process of growing up. Sandra Cisneros' “Eleven” and Amy Tan's <abbr title="the small, tender morsels of meat located on the side of a fish's face, just below the eyes">"Fish Cheeks"<sup>1</sup></abbr> depict this feeling of loneliness. In both stories, children are troubled by the differences between their culture and their surroundings and are torn between their identity and society's expectations. In “Eleven,” the children experience a difficult time at school, while in “Fish Cheeks,” they are embarrassed by <strong>cultural differences</strong> at family meals. Both stories show how <strong>society</strong> makes children feel ashamed of their own culture.
+            Feeling out of place is something that many people experience during the process of growing up. <em>Sandra Cisneros'</em> <strong>“Eleven”</strong> and <em>Amy Tan's</em> <abbr title="the small, tender morsels of meat located on the side of a fish's face, just below the eyes"><strong>"Fish Cheeks"</strong><sup>1</sup></abbr> depict this feeling of loneliness. In both stories, children are troubled by the differences between their culture and their surroundings and are torn between their identity and society's expectations. In “Eleven,” the children experience a difficult time at school, while in “Fish Cheeks,” they are embarrassed by <strong>cultural differences</strong> at family meals. Both stories show how <strong>society</strong> makes children feel ashamed of their own culture.
             
 
         </p>
