--- a/Activity-02/index.html
+++ b/Activity-02/index.html
@@ -22,12 +22,12 @@
         </p>
 
         <p>
-            In Sandra Cisneros' Eleven, a girl named Rachel feels sad and helpless when her teacher mistakes her owning an old red sweater. The story conveys the loneliness and distress of feeling “different” at school without explicitly describing her culture. Rachel shows that she still feels like a child and that adults and friends do not understand her by saying, " What they don't understand about birthdays and what they never tell you is that when you're eleven, you're also ten, and nine, and eight.” The red sweater represents embarrassment and being forced to wear something that does not belong to you. Cisneros successfully expresses the feeling of loneliness through a child's perspective and gentle language.
+            In <em>Sandra Cisneros'</em> Eleven, a girl named Rachel feels sad and helpless when her teacher mistakes her owning an old red sweater. The story conveys the loneliness and distress of feeling “different” at school without explicitly describing her culture. Rachel shows that she still feels like a child and that adults and friends do not understand her by saying, " What they don't understand about birthdays and what they never tell you is that when you're eleven, you're also ten, and nine, and eight.” The red sweater represents embarrassment and being forced to wear something that does not belong to you. Cisneros successfully expresses the feeling of loneliness through a child's perspective and gentle language.
 
         </p>
 
         <p>
-            In Fish Cheeks, Amy Tan shares a memory of having Christmas dinner with an American boy and finding Chinese culture embarrassing. When she saw the fish eyes and tofu, she wondered uneasily, "What would Robert think of such a Chinese Christmas?” This shows her desire to conform to American culture and her embarrassment about her own culture. But in the end, her mother tells her to value her own culture. This story reminds us that we don't have to hide who we are. Tan tells us that cultural differences not only cause vexation, but also lead to growth and self-confidence.
+            In Fish Cheeks, <em>Amy Tan</em> shares a memory of having Christmas dinner with an American boy and finding Chinese culture embarrassing. When she saw the fish eyes and tofu, she wondered uneasily, "What would Robert think of such a Chinese Christmas?” This shows her desire to conform to American culture and her embarrassment about her own culture. But in the end, her mother tells her to value her own culture. This story reminds us that we don't have to hide who we are. Tan tells us that cultural differences not only cause vexation, but also lead to growth and self-confidence.
 
         </p>
 
@@ -37,7 +37,7 @@
         </p>
 
         <p>
-            In conclusion, in Sandra Cisneros' “Eleven” and Amy Tan's “Fish Cheeks,” the young protagonists are experiencing cultural embarrassment and loneliness as they contemplate how to align their identities with society's expectations. Rachel is shamed at school, while Tan's protagonist is embarrassed at a family dinner. 
+            In conclusion, in <em>Sandra Cisneros'</em> “Eleven” and <em>Amy Tan's</em> “Fish Cheeks,” the young protagonists are experiencing cultural embarrassment and loneliness as they contemplate how to align their identities with society's expectations. Rachel is shamed at school, while Tan's protagonist is embarrassed at a family dinner. 
 
         </p>
 
