--- a/Activity-03/Book Summary.html
+++ b/Activity-03/Book Summary.html
@@ -11,9 +11,12 @@
     <h1>Spider-Man</h1>
     <nav>
       <ul>
+        <li><a href="https://www.marvel.com/characters/spider-man/on-screen" target="_blank">Official Site</a></li>
+
         <li><a href="../Activity-03/index1.html">Home</a></li>
         <li><a href="../Activity-03/index2.html">Characters</a></li>
         <li><a href="../Activity-03/index.html">Villains</a></li>
+        <li><a href="#origin">Jump to Origin Story</a></li>
       </ul>
     </nav>
   </header>
@@ -22,7 +25,7 @@
     <h2>Book Summary</h2>
 
     <section>
-        <p><strong>Spider-Man</strong> is one of the most iconic superheroes in comic history. Created by Stan Lee and Steve Ditko in 1962, his story resonates with readers of all ages.</p>
+        <p id="origin"><strong>Spider-Man</strong> is one of the most iconic superheroes in comic history. Created by Stan Lee and Steve Ditko in 1962, his story resonates with readers of all ages.</p>
         <p>After being bitten by a radioactive spider, <em>Peter Parker</em> gains extraordinary abilities, but also faces the weight of responsibility.</p>
         <p>Spider-Man's struggles often reflect <u>real-life issues</u> like grief, balancing work and school, and finding identity.</p>
         <p>Throughout the comics, he learns that power must be used wisely—a theme that continues in modern adaptations.</p>
