--- a/Activity-03/index.html
+++ b/Activity-03/index.html
@@ -15,7 +15,7 @@
 
         <li><a href="../Activity-03/index1.html">Home</a></li>
         <li><a href="../Activity-03/index2.html">Characters</a></li>
-        <li><a href="../Activity-03/index.html">Villains</a></li>
+        <li><a href="../Activity-03/index3.html">Villains</a></li>
         <li><a href="#origin">Jump to Origin Story</a></li>
       </ul>
     </nav>
