--- a/Activity-03/index.html
+++ b/Activity-03/index.html
@@ -11,7 +11,7 @@
     <h1>Spider-Man</h1>
     <nav>
       <ul>
-        <li><a href="https://www.marvel.com/characters/spider-man/on-screen" target="_blank">Official Site</a></li>
+        <li><a href="https://www.marvel.com/comics" target="_blank">Official Site</a></li>
 
         <li><a href="../Activity-03/index1.html">Home</a></li>
         <li><a href="../Activity-03/index2.html">Characters</a></li>
