--- a/Activity-05/index.html
+++ b/Activity-05/index.html
@@ -7,8 +7,11 @@
 </head>
 <body>
 
-  <header>
-    <h1 style="background-color: #030303;">Spider-Man</h1>
+  <header style="background-color: #87172a;">
+    <h1 style="background-color: #75e7dc;">Spider-Man</h1>
+    <img src="spiderman.jpg" alt="Spider-Man' Photo"
+    style="border: 3px solid rgb(23, 27, 4); border-radius: 15px; box-shadow: 5px 5px 15px grey;"
+    width="800">     
     <nav>
       <ul>
         <li><a href="https://www.marvel.com/comics" target="_blank">Official Site</a></li>
@@ -56,8 +59,7 @@
         <p>The city of New York acts almost like a character itself, bustling with life, crime, and opportunity for heroism.</p>
       
 
-        <img src="spiderman_swing.jpeg" alt="Spider-Man swinging between skyscrapers in New York City" width="400">
-        <img src="spiderman_title.jpeg" alt="Spider-Man’s book title" width="400">
+        
     </section>
 
     <section>
@@ -71,7 +73,7 @@
     </section>
   </main>
 
-  <footer>
+  <footer style="background-color: #4979ea;">
     <blockquote cite="https://www.marvel.com/characters/spider-man/on-screen">
         "With great power comes great responsibility.- Uncle Ben"
       </blockquote>
