--- a/Activity-06/index.html
+++ b/Activity-06/index.html
@@ -5,6 +5,7 @@
   <style> li {color: white;} </style>
   <style>/* This style gives you a yellow background to highlighted content */ .highlight{background-color: blue;}</style>
   <style> #mainHeader {font-size: 30px; font-weight: bold;}</style>
+  <style>h1{text-align: center;}</style>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Spider-Man - Book Summary</title>
@@ -12,7 +13,7 @@
 <body style="background-color: #87172a;">
 
   <header style="background-color: #87172a;">
-    <h1 style="background-color: #75e7dc;">Spider-Man</h1>
+    <h1 style="background-color: #75e7dc; height: 70px;">Spider-Man</h1>
     <img src="spiderman.jpg" alt="Spider-Man' Photo"
     style="border: 3px solid rgb(23, 27, 4); border-radius: 15px; box-shadow: 5px 5px 15px grey;"
     width="800">     
