--- a/PhotoTourProject/place2.html
+++ b/PhotoTourProject/place2.html
@@ -16,7 +16,7 @@
     <h2>3 of the Top places in Japan😁</h2> 
     <nav>
       <ul>
-        <li><a href="../PhotoTourProject/index.html" target="_blank">Home</a></li>
+        <li><a href="../PhotoTourProject/index.html">Home</a></li>
         
         <li><a href="../PhotoTourProject/place1.html">Tokyo Station</a></li>
 
