--- a/PhotoTourProject/place1.html
+++ b/PhotoTourProject/place1.html
@@ -12,7 +12,7 @@
     <h1 style="background-color: #75e7dc; height: 70px;">A Photo Tour of Japan!!🇯🇵</h1>
     <img src="japan.jpg" alt="the picture of Japan and flag"
     style="border: 3px solid rgb(23, 27, 4); border-radius: 15px; box-shadow: 5px 5px 15px rgb(47, 94, 198);"
-    width="500">    
+    width="500">  
     <h2>3 of the Top places in Japan😁</h2> 
     <nav>
       <ul>
@@ -35,9 +35,12 @@
 
         <header style="background-color: #faf7f8;">
             <h1 style="background-color: #e79d75; height: 70px;">Tokyo Station</h1>
+            <figure>
             <img src="tokyo_station.jpg" alt="the picture of Tokyo station"
             style="border: 3px solid rgb(23, 27, 4); border-radius: 15px; box-shadow: 5px 5px 15px rgb(224, 139, 35);"
             width="500"> 
+            <figcaption>Figure 1: the picture of Tokyo station</figcaption>
+            </figure>
         </header>
 
         <p>Tokyo Station is one of Japan’s busiest and most iconic train stations, located in the heart of Tokyo.</p>
