--- a/PhotoTourProject/place2.html
+++ b/PhotoTourProject/place2.html
@@ -10,7 +10,7 @@
 
   <header style="background-color: #faf7f8;">
     <h1 style="background-color: #75e7dc; height: 70px;">A Photo Tour of Japan!!🇯🇵</h1>
-    <img src="japan.jpg" alt="the picture of Mt.Fuji"
+    <img src="japan.jpg" alt="the picture of Japan and flag"
     style="border: 3px solid rgb(23, 27, 4); border-radius: 15px; box-shadow: 5px 5px 15px rgb(47, 94, 198);"
     width="500">    
     <h2>3 of the Top places in Japan😁</h2> 
@@ -35,9 +35,12 @@
 
         <header style="background-color: #faf7f8;">
             <h1 style="background-color: #5f99da; height: 70px; font-size: 270%;">Mt.Fuji</h1>
-            <img src="fuji.jpg" alt="the picture of Tokyo station"
+            <figure>
+            <img src="fuji.jpg" alt="the picture of Mt.Fuji"
             style="border: 3px solid rgb(23, 27, 4); border-radius: 15px; box-shadow: 5px 5px 15px rgb(58, 166, 196);"
-            width="500"> 
+            width="500">
+            <figcaption>Figure 2: the picture of Mt.Fuji</figcaption> 
+            </figure>
         </header>
 
         <p>Mount Fuji is the tallest mountain in Japan, standing at 3,776 meters (12,389 feet). It is an iconic symbol of Japan, known for its perfectly symmetrical cone shape and cultural significance.</p>
