--- a/PhotoTourProject/place3.html
+++ b/PhotoTourProject/place3.html
@@ -35,9 +35,12 @@
 
         <header style="background-color: #faf7f8;">
             <h1 style="background-color: #9975e7; height: 70px;">Lake Biwa</h1>
+            <figure>
             <img src="biwako.jpg" alt="the picture of Lake Biwa"
             style="border: 3px solid rgb(23, 27, 4); border-radius: 15px; box-shadow: 5px 5px 15px rgb(185, 89, 37);"
             width="500"> 
+            <figcaption>Figure 3:the picture of Lake Biwa</figcaption>
+        </figure>
         </header>
 
         <p>Lake Biwa is the largest freshwater lake in Japan, located in Shiga Prefecture, near Kyoto. It is one of the oldest lakes in the world, believed to be over 4 million years old.</p>
