--- a/Activity-08/index.html
+++ b/Activity-08/index.html
@@ -11,11 +11,11 @@
 </head>
 <body style="background-color: #87172a;">
 
-  <header style="background-color: #87172a;">
+  <header id="page-header" style="background-color: #87172a;">
     <h1 style="background-color: #75e7dc; height: 70px;">Spider-Man</h1>
     <img src="spiderman.jpg" alt="Spider-Man' Photo"
     style="border: 3px solid rgb(23, 27, 4); border-radius: 15px; box-shadow: 5px 5px 15px grey;"
-    width="800">     
+    width="400">     
     <nav>
       <ul>
         <li><a href="https://www.marvel.com/comics" target="_blank">Official Site</a></li>
