--- a/Activity-08/index.html
+++ b/Activity-08/index.html
@@ -31,7 +31,8 @@
   <main>
 
 
-    <section style="background-color: #a60822;" style="border: white solid; padding: 50px;">
+    <section 
+    style="background-color: #a60822;" >
         <h1 id="mainHeader">Chapters</h1>
         <ol>
           <li>The Origin of Spider-Man</li>
