--- a/Activity-13/index.html
+++ b/Activity-13/index.html
@@ -12,7 +12,7 @@
 <body style="background-color: #87172a;">
 <div>
     <header id="page-header">
-        <div class="container" class="pic">
+        <div class="container pic">
           <h1 class="site-title">Spider-Man</h1>
           <img 
             src="spiderman.jpg" 
@@ -20,7 +20,7 @@
             class="hero-image"
             width="250"
           >     
-          <nav class="main-nav" class="nav list">
+          <nav class="main-nav nav list">
             <ul>
               <li><a href="https://www.marvel.com/comics" target="_blank">Official Site</a></li>
               <li><a href="../Activity-03/index1.html">Home</a></li>
