--- a/Activity-13/index.html
+++ b/Activity-13/index.html
@@ -20,7 +20,7 @@
             class="hero-image"
             width="250"
           >     
-          <nav class="main-nav nav list">
+          <nav class="main-nav" class="nav list">
             <ul>
               <li><a href="https://www.marvel.com/comics" target="_blank">Official Site</a></li>
               <li><a href="../Activity-03/index1.html">Home</a></li>
