--- a/Activity-13/index.html
+++ b/Activity-13/index.html
@@ -74,8 +74,7 @@
 
     <section class="pic">
       <h3>Watch the Trailer</h3>
-      <iframe class="pic"
-      class="video-frame"
+      <iframe class="pic video-frame"
       width="560" 
       height="315"
       src="https://www.youtube.com/embed/t06RUxPbp_c"
