--- a/Activity-14/index.html
+++ b/Activity-14/index.html
@@ -13,10 +13,10 @@
 <div class="container">
     <header id="page-header">
         <h1 class="site-title">Spider-Man</h1>
-        <div class="container pic"></div>
-          <div><img src="spiderman.jpg" alt="Spider-Man Photo"class="hero-image"width="250"></div>  
-          <div><img src="spiderman1.jpg" alt="Spider-Man Photo"class="hero-image"width="250"></div>  
-          <div><img src="spiderman2.jpg" alt="Spider-Man Photo"class="hero-image"width="250"></div>   
+        <div class="container pic">
+          <div><img src="spiderman.jpg" alt="Spider-Man Photo" class="hero-image" width="250"></div>  
+          <div><img src="spiderman1.jpg" alt="Spider-Man Photo" class="hero-image" width="250"></div>  
+          <div><img src="spiderman2.jpg" alt="Spider-Man Photo" class="hero-image" width="250"></div>   
 
 
 
@@ -31,8 +31,7 @@
             </ul>
           </nav>
         </div>
-    </header>
-      
+    </header> 
 </div>
   <main>
 
