--- a/Activity-14/index.html
+++ b/Activity-14/index.html
@@ -14,14 +14,12 @@
     <header id="page-header">
         <h1 class="site-title">Spider-Man</h1>
         <div class="container pic">
-          <div><img src="spiderman.jpg" alt="Spider-Man Photo" class="hero-image" width="250"></div>  
-          <div><img src="spiderman1.jpg" alt="Spider-Man Photo" class="hero-image" width="250"></div>  
-          <div><img src="spiderman2.jpg" alt="Spider-Man Photo" class="hero-image" width="250"></div>   
-
-
-
-
-          <nav class="main-nav nav list">
+            <div><img src="spiderman.jpg" alt="Spider-Man Photo" class="hero-image" width="250"></div>  
+            <div><img src="spiderman1.jpg" alt="Spider-Man Photo" class="hero-image" width="250"></div>  
+            <div><img src="spiderman2.jpg" alt="Spider-Man Photo" class="hero-image" width="250"></div>  
+          </div>
+          
+          <nav class="main-nav nav-list">
             <ul>
               <li><a href="https://www.marvel.com/comics" target="_blank">Official Site</a></li>
               <li><a href="../Activity-03/index1.html">Home</a></li>
