--- a/Activity-14/index.html
+++ b/Activity-14/index.html
@@ -19,13 +19,13 @@
             <div><img src="spiderman2.jpg" alt="Spider-Man Photo" class="hero-image" width="250"></div>  
           </div>
           
-          <nav class="main-nav nav-list">
-            <ul>
-              <li><a href="https://www.marvel.com/comics" target="_blank">Official Site</a></li>
-              <li><a href="../Activity-03/index1.html">Home</a></li>
-              <li><a href="../Activity-03/index2.html">Characters</a></li>
-              <li><a href="../Activity-03/index3.html">Villains</a></li>
-              <li><a href="#origin">Jump to Origin Story</a></li>
+          <nav class="main-nav">
+            <ul class="nav-list">
+              <div><li><a href="https://www.marvel.com/comics" target="_blank">Official Site</a></li></div>
+              <div><li><a href="../Activity-03/index1.html">Home</a></li></div>
+              <div><li><a href="../Activity-03/index2.html">Characters</a></li></div>
+              <div><li><a href="../Activity-03/index3.html">Villains</a></li></div>
+              <div><li><a href="#origin">Jump to Origin Story</a></li></div>
             </ul>
           </nav>
         </div>
