--- a/Activity-14/index.html
+++ b/Activity-14/index.html
@@ -21,11 +21,11 @@
           
           <nav class="main-nav">
             <ul class="nav-list">
-              <div><li><a href="https://www.marvel.com/comics" target="_blank">Official Site</a></li></div>
-              <div><li><a href="../Activity-03/index1.html">Home</a></li></div>
-              <div><li><a href="../Activity-03/index2.html">Characters</a></li></div>
-              <div><li><a href="../Activity-03/index3.html">Villains</a></li></div>
-              <div><li><a href="#origin">Jump to Origin Story</a></li></div>
+              <li><a href="https://www.marvel.com/comics" target="_blank">Official Site</a></li>
+              <li><a href="../Activity-03/index1.html">Home</a></li>
+              <li><a href="../Activity-03/index2.html">Characters</a></li>
+              <li><a href="../Activity-03/index3.html">Villains</a></li>
+              <li><a href="#origin">Jump to Origin Story</a></li>
             </ul>
           </nav>
         </div>
