--- a/Activity-14/index.html
+++ b/Activity-14/index.html
@@ -10,14 +10,15 @@
   <title>Spider-Man - Book Summary</title>
 </head>
 <body style="background-color: #87172a;">
-<div class="container">
+
     <header id="page-header">
+        <div class="container"></div>
         <h1 class="site-title">Spider-Man</h1>
         <div class="container pic">
             <div><img src="spiderman.jpg" alt="Spider-Man Photo" class="hero-image" width="250"></div>  
             <div><img src="spiderman1.jpg" alt="Spider-Man Photo" class="hero-image" width="250"></div>  
             <div><img src="spiderman2.jpg" alt="Spider-Man Photo" class="hero-image" width="250"></div>  
-          </div>
+            </div>
           
           <nav class="main-nav">
             <ul class="nav-list">
@@ -30,7 +31,7 @@
           </nav>
         </div>
     </header> 
-</div>
+
   <main>
 
 
