--- a/Activity-14/index.html
+++ b/Activity-14/index.html
@@ -14,7 +14,7 @@
     <header id="page-header">
         <div class="container"></div>
         <h1 class="site-title">Spider-Man</h1>
-        <div class="container pic">
+        <div class="container pic"></div>
             <div><img src="spiderman.jpg" alt="Spider-Man Photo" class="hero-image" width="250"></div>  
             <div><img src="spiderman1.jpg" alt="Spider-Man Photo" class="hero-image" width="250"></div>  
             <div><img src="spiderman2.jpg" alt="Spider-Man Photo" class="hero-image" width="250"></div>  
