--- a/Project2/place1.html
+++ b/Project2/place1.html
@@ -16,15 +16,11 @@
     <h2>3 of the Top places in Japan😁</h2> 
     <nav>
       <ul class="nav-list">
-        <li><a href="../PhotoTourProject/index.html">Home</a></li>
-        
-        <li><a href="../PhotoTourProject/place1.html">Tokyo Station</a></li>
-
-        <li><a href="../PhotoTourProject/place2.html">Mt.Fuji</a></li>
-
-        <li><a href="../PhotoTourProject/place3.html">Lake Biwa</a></li>
-
-        <li><a href="../PhotoTourProject/food.html">Ramen</a></li>
+        <li><a href="../Project2/index.html">Home</a></li>
+        <li><a href="../Project2/place1.html">Tokyo Station</a></li>
+        <li><a href="../Project2/place2.html">Mt.Fuji</a></li>
+        <li><a href="../Project2/place3.html">Lake Biwa</a></li>
+        <li><a href="../Project2/food.html">Ramen</a></li>
       </ul>
     </nav>
   </header>
@@ -33,15 +29,27 @@
   <main>
     <section style="background-color: #e78e6b;" style="border: white solid; padding: 60px;">
 
-        <header style="background-color: #faf7f8;">
-            <h1 style="background-color: #e79d75; height: 70px;">Tokyo Station</h1>
-            <figure>
+      <header style="background-color: #faf7f8;">
+      <h1 style="background-color: #e79d75; height: 70px;">Tokyo Station</h1>
+        <figure>
+        <div class="row">
+          <div class="column">
             <img src="tokyo_station.jpg" alt="the picture of Tokyo station"
             style="border: 3px solid rgb(23, 27, 4); border-radius: 15px; box-shadow: 5px 5px 15px rgb(224, 139, 35);"
-            width="500"> 
+            width="500">
+          </div>
+          <div class="column1"><img src="tokyo_asakusa.jpg" alt="the picture of Tokyo station"
+            style="border: 3px solid rgb(23, 27, 4); border-radius: 15px; box-shadow: 5px 5px 15px rgb(224, 139, 35);"
+            width="500">
+          </div>
+          <div class="column2"><img src="tokyotower.jpeg" alt="the picture of Tokyo station"
+            style="border: 3px solid rgb(23, 27, 4); border-radius: 15px; box-shadow: 5px 5px 15px rgb(224, 139, 35);"
+            width="500"></div>
             <figcaption>Figure 1: the picture of Tokyo station</figcaption>
-            </figure>
-        </header>
+          </div>
+        </div>
+        </figure>
+      </header>
 
         <p>Tokyo Station is one of Japan’s busiest and most iconic train stations, located in the heart of Tokyo.</p>
             <p>Opened in 1914, the station is famous for its beautiful red-brick Marunouchi Building, which blends Western-style architecture with Japanese precision.</p>
