--- a/Project2/place3.html
+++ b/Project2/place3.html
@@ -14,16 +14,12 @@
     width="500">    
     <h2>3 of the Top places in Japan😁</h2> 
     <nav>
-      <ul>
-        <li><a href="../PhotoTourProject/index.html">Home</a></li>
-        
-        <li><a href="../PhotoTourProject/place1.html">Tokyo Station</a></li>
-
-        <li><a href="../PhotoTourProject/place2.html">Mt.Fuji</a></li>
-
-        <li><a href="../PhotoTourProject/place3.html">Lake Biwa</a></li>
-
-        <li><a href="../PhotoTourProject/food.html">Ramen</a></li>
+      <ul class="nav-list">
+        <li><a href="../Project2/index.html">Home</a></li>
+        <li><a href="../Project2/place1.html">Tokyo Station</a></li>
+        <li><a href="../Project2/place2.html">Mt.Fuji</a></li>
+        <li><a href="../Project2/place3.html">Lake Biwa</a></li>
+        <li><a href="../Project2/food.html">Ramen</a></li>
       </ul>
     </nav>
   </header>
