--- a/Project2/food.html
+++ b/Project2/food.html
@@ -15,29 +15,39 @@
     <h2>3 of the Top places in Japan😁</h2> 
     <nav>
       <ul class="nav-list">
-        <li><a href="../PhotoTourProject/index.html">Home</a></li>
-        
-        <li><a href="../PhotoTourProject/place1.html">Tokyo Station</a></li>
-
-        <li><a href="../PhotoTourProject/place2.html">Mt.Fuji</a></li>
-
-        <li><a href="../PhotoTourProject/place3.html">Lake Biwa</a></li>
-
-        <li><a href="../PhotoTourProject/food.html">Ramen</a></li>
+        <li><a href="../Project2/index.html">Home</a></li>
+        <li><a href="../Project2/place1.html">Tokyo Station</a></li>
+        <li><a href="../Project2/place2.html">Mt.Fuji</a></li>
+        <li><a href="../Project2 place3.html">Lake Biwa</a></li>
+        <li><a href="../Project2/food.html">Ramen</a></li>
       </ul>
     </nav>
   </header>
 
 
   <main>
-    <section style="background-color: #e78e6b;" style="border: white solid; padding: 60px;">
+    <section class="ramen">
 
-        <header style="background-color: #faf7f8;">
+      <header style="background-color: #faf7f8;">
+        <div class="row">
+          <div class="column">
             <h1 style="background-color: #e79d75; height: 70px;">Ramen</h1>
             <img src="ramen.jpg" alt="the picture of Ramen"
             style="border: 3px solid rgb(23, 27, 4); border-radius: 15px; box-shadow: 5px 5px 15px rgb(224, 139, 35);"
+            width="500">
+          </div>
+          <div class="column1">
+            <img src="ramen1.jpg" alt="the picture of Ramen"
+            style="border: 3px solid rgb(23, 27, 4); border-radius: 15px; box-shadow: 5px 5px 15px rgb(224, 139, 35);"
+            width="500">
+          </div> 
+          <div class="column2">
+            <img src="ramen2.jpg" alt="the picture of Ramen"
+            style="border: 3px solid rgb(23, 27, 4); border-radius: 15px; box-shadow: 5px 5px 15px rgb(224, 139, 35);"
             width="500"> 
-        </header>
+          </div>
+        </div>
+      </header>
 
         <p>Ramen is one of Japan’s most beloved and iconic dishes.
         <p>It consists of Chinese-style wheat noodles served in a savory broth, often flavored with soy sauce, miso, or salt.</p>
