--- a/Project2/index.html
+++ b/Project2/index.html
@@ -15,11 +15,11 @@
         <h2>3 of the Top places in Japan😁</h2> 
         <nav>
           <ul class="nav-list">
-            <li><a href="../PhotoTourProject/index.html">Home</a></li>
-            <li><a href="../PhotoTourProject/place1.html">Tokyo Station</a></li>
-            <li><a href="../PhotoTourProject/place2.html">Mt.Fuji</a></li>
-            <li><a href="../PhotoTourProject/place3.html">Lake Biwa</a></li>
-            <li><a href="../PhotoTourProject/food.html">Ramen</a></li>
+            <li><a href="../Project2/index.html">Home</a></li>
+            <li><a href="../Project2/place1.html">Tokyo Station</a></li>
+            <li><a href="../Project2/place2.html">Mt.Fuji</a></li>
+            <li><a href="../Project2/place3.html">Lake Biwa</a></li>
+            <li><a href="../Project2/food.html">Ramen</a></li>
           </ul>
         </nav>
     </header>
