--- a/Project2/place3.html
+++ b/Project2/place3.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-  <header style="background-color: #faf7f8;">
+  <header>
     <h1>A Photo Tour of Japan!!🇯🇵</h1>
     <img src="japan.jpg" alt="the picture of Japan and flag"
     width="500">    
@@ -28,7 +28,7 @@
   <main>
     <section style="background-color: #cd8155;" style="border: white solid; padding: 60px;">
 
-        <header style="background-color: #faf7f8;">
+        <header>
             <h1 style="background-color: #9975e7; height: 70px;">Lake Biwa</h1>
             <figure>
             <img src="biwako.jpg" alt="the picture of Lake Biwa"
@@ -53,7 +53,7 @@
 
   </main>
 
-  <footer style="background-color: #4979ea;">
+  <footer>
 
 
 
