--- a/Project2/food.html
+++ b/Project2/food.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>PhotoTourProject</title>
 </head>
-<body style="background-color: #f9f5f6;">
+<body>
 
   <header>
     <h1>A Photo Tour of Japan!!🇯🇵</h1>
@@ -28,7 +28,7 @@
   <main>
     <section class="ramen">
 
-      <header style="background-color: #faf7f8;">
+      <header>
         <div class="row">
           <div class="column">
             <h1 style="background-color: #e79d75; height: 70px;">Ramen</h1>
@@ -49,7 +49,7 @@
         </div>
       </header>
 
-        <p>Ramen is one of Japan’s most beloved and iconic dishes.
+        <p>Ramen is one of Japan’s most beloved and iconic dishes.</p>x
         <p>It consists of Chinese-style wheat noodles served in a savory broth, often flavored with soy sauce, miso, or salt.</p>
         <p>Toppings commonly include sliced pork (chashu), green onions, boiled eggs, nori (seaweed), and bamboo shoots.</p>
         <p>Each region in Japan has its own unique style of ramen—for example, Tonkotsu (pork bone broth) from Fukuoka or miso ramen from Hokkaido.</p>
@@ -65,7 +65,7 @@
 
   </main>
 
-  <footer style="background-color: #4979ea;">
+  <footer>
 
 
 
