--- a/Project2/place1.html
+++ b/Project2/place1.html
@@ -6,13 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>PhotoTourProject</title>
 </head>
-<body style="background-color: #f9f5f6;">
+<body>
 
-  <header style="background-color: #faf7f8;">
-    <h1 style="background-color: #75e7dc; height: 70px;">A Photo Tour of Japan!!🇯🇵</h1>
+  <header>
+    <h1>A Photo Tour of Japan!!🇯🇵</h1>
     <img src="japan.jpg" alt="the picture of Japan and flag"
-    style="border: 3px solid rgb(23, 27, 4); border-radius: 15px; box-shadow: 5px 5px 15px rgb(47, 94, 198);"
-    width="500">  
+    width="500">     
     <h2>3 of the Top places in Japan😁</h2> 
     <nav>
       <ul class="nav-list">
@@ -27,10 +26,10 @@
 
 
   <main>
-    <section style="background-color: #e78e6b;" style="border: white solid; padding: 60px;">
+    <section class="section-bg">
 
-      <header style="background-color: #faf7f8;">
-      <h1 style="background-color: #e79d75; height: 70px;">Tokyo Station</h1>
+      <header>
+      <h1>Tokyo Station</h1>
         <figure>
         <div class="row">
           <div class="column">
@@ -67,7 +66,7 @@
 
   </main>
 
-  <footer style="background-color: #4979ea;">
+  <footer>
 
 
 
