--- a/Project2/place2.html
+++ b/Project2/place2.html
@@ -26,10 +26,10 @@
 
 
   <main>
-    <section style="background-color: #297dc7e5;" style="border: white solid; padding: 60px;">
+    <section class="mount-fuji">
 
         <header>
-            <h1 style="background-color: #5f99da; height: 70px; font-size: 270%;">Mt.Fuji</h1>
+            <h1 class="location-title">Mt.Fuji</h1>
             <figure>
             <img src="fuji.jpg" alt="the picture of Mt.Fuji"
             style="border: 3px solid rgb(23, 27, 4); border-radius: 15px; box-shadow: 5px 5px 15px rgb(58, 166, 196);"
