--- a/Project2/food.html
+++ b/Project2/food.html
@@ -31,7 +31,7 @@
       <header>
         <div class="row">
           <div class="column">
-            <h1 style="background-color: #e79d75; height: 70px;">Ramen</h1>
+            <h1 class="sub-heading">Ramen</h1>
             <img src="ramen.jpg" alt="the picture of Ramen"
             style="border: 3px solid rgb(23, 27, 4); border-radius: 15px; box-shadow: 5px 5px 15px rgb(224, 139, 35);"
             width="500">
