--- a/Project2/place1.html
+++ b/Project2/place1.html
@@ -29,7 +29,7 @@
     <section class="section-bg">
 
       <header>
-      <h1>Tokyo Station</h1>
+      <h1 class="sub-heading">Tokyo Station</h1>
         <figure>
         <div class="row">
           <div class="column">
