--- a/Project2/place3.html
+++ b/Project2/place3.html
@@ -26,10 +26,10 @@
 
 
   <main>
-    <section style="background-color: #cd8155;" style="border: white solid; padding: 60px;">
+    <section class="lake-biwa">
 
         <header>
-            <h1 style="background-color: #9975e7; height: 70px;">Lake Biwa</h1>
+            <h1 class="section-heading">Lake Biwa</h1>
             <figure>
             <img src="biwako.jpg" alt="the picture of Lake Biwa"
             style="border: 3px solid rgb(23, 27, 4); border-radius: 15px; box-shadow: 5px 5px 15px rgb(185, 89, 37);"
