--- a/Activity-16/index.html
+++ b/Activity-16/index.html
@@ -14,6 +14,7 @@
         <button id="randomColor">Generate Random Color</button>
 
         <div class="display-area" id="displayArea"></div>
+           <span id="colorValue"></span>
 
         <h2>Palette History:</h2>
         <div class="palette-history" id="paletteHistory"></div>
