--- a/Activity-17/index.html
+++ b/Activity-17/index.html
@@ -20,6 +20,10 @@
         <input type="password" id="password" name="password" required>
         <div class="feedback" id="passwordFeedback"></div>
 
+        <label for="phonenumber">Phonenumber:</label>
+        <input type="phonenumber" id="phonenumber" name="phonenumber" required>
+        <div class="feedback" id="phonenumberFeedback"></div>
+
         <button type="submit">Register</button>
         <div class="feedback valid-feedback" id="registrationFeedback"></div>
     </form>
